ci: add release ci and build.gradle changes for versioning

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
+
+def projectVersion = System.getenv("VERSION") ?: '1.0.0'
 
 repositories {
     mavenLocal()
@@ -22,10 +25,28 @@ dependencies {
     testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
 }
 
-group = 'shortestpath'
-version = '1.17.11'
+group = 'com.github.cbartram'
 sourceCompatibility = '1.11'
+version = projectVersion
+project.version = projectVersion
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+jar {
+    archiveBaseName = 'shortest-path'
+    archiveVersion = projectVersion
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            groupId = group
+            artifactId = 'shortest-path'
+            version = version
+        }
+    }
 }
